--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,6 +171,9 @@ add_subdirectory(source)
 # Examples
 
 add_subdirectory(examples)
+add_subdirectory(cmenuitem)
+add_subdirectory(cstatusline)
+add_subdirectory(capplication)
 
 # Test
 
