--- a/capplication/CMakeLists.txt
+++ b/capplication/CMakeLists.txt
@@ -1,5 +1,5 @@
 # CMakeLists.txt for capplication library
-# C builder API for TApplication
+# C wrappers for TApplication
 
 cmake_minimum_required(VERSION 3.5)
 
@@ -7,14 +7,11 @@ cmake_minimum_required(VERSION 3.5)
 add_library(capplication STATIC
     capplication.cpp
     capplication.h
+        ckeys.h
 )
 
-# Link against tvision and our other C wrapper libraries
-target_link_libraries(capplication PUBLIC 
-    tvision
-    cmenuitem
-    cstatusline
-)
+# Link against tvision and the other C wrapper libraries
+target_link_libraries(capplication PUBLIC tvision cmenuitem cstatusline)
 
 # Include directories
 target_include_directories(capplication PUBLIC
@@ -23,14 +20,11 @@ target_include_directories(capplication PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/../cstatusline
 )
 
-# Set C++ standard (need C++11 for std::map)
-target_compile_features(capplication PUBLIC cxx_std_11)
+# Set C++ standard
+target_compile_features(capplication PUBLIC cxx_std_14)
 
 # Optional: Add an example/test program
 add_executable(capplication_example example.c)
-target_link_libraries(capplication_example 
-    capplication
-    cmenuitem
-    cstatusline
-    tvision
-)
+target_link_libraries(capplication_example capplication cmenuitem cstatusline tvision)
+
+# Made with Bob
